--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,18 @@
   text-align: center;
 }
 
+/* Tablet style */
+@media (min-width: 600px) and (max-width: 1200px) {
+  #root {
+    max-width: none;
+  }
+}
+
+
+/* Desktop style */
+@media (min-width: 1200px) {
+}
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +51,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
