--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@ body[data-theme="dark"] {
 /* Remove default button styles */
 .theme-button {
   background: none;
-  border: none;
+  border: 2px solid rgb(78, 79, 80);
+  border-radius: 3px;
   cursor: pointer;
   padding: 8px;
   display: flex;
@@ -64,39 +65,4 @@ body[data-theme="light"] .theme-button:hover {
 /* Desktop style */
 @media (min-width: 1200px) {
 }
-/* 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
