--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,55 @@
   text-align: center;
 }
 
+/* Стили для светлой темы */
+body[data-theme="light"] {
+  background-color: #e1dfdf;
+  color:#0c9bd3;
+}
+
+/* Стили для темной темы */
+body[data-theme="dark"] {
+  background-color: #333;
+  color:#0c9bd3;
+}
+
+/* Remove default button styles */
+.theme-button {
+  background: none;
+  border: 2px solid rgb(78, 79, 80);
+  border-radius: 3px;
+  cursor: pointer;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px; /* Adjust icon size */
+  transition: transform 0.2s ease-in-out;
+  position: fixed;
+}
+
+/* Add hover effect */
+.theme-button:hover {
+  transform: scale(1.1);
+}
+
+/* Light theme styles */
+body[data-theme="light"] .theme-button {
+  color: #333; /* Dark icon in light mode */
+}
+
+/* Dark theme styles */
+body[data-theme="dark"] .theme-button {
+  color: #ffd700; /* Yellow icon in dark mode */
+}
+
+/* Optional: Add a soft glow effect */
+body[data-theme="dark"] .theme-button:hover,
+body[data-theme="light"] .theme-button:hover {
+  filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.5));
+}
+
+
 /* Tablet style */
 @media (min-width: 600px) and (max-width: 1200px) {
   #root {
@@ -16,39 +65,4 @@
 /* Desktop style */
 @media (min-width: 1200px) {
 }
-/* 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-} */
