--- a/src/components/InputWithLabel/InputWithLabel.module.css
+++ b/src/components/InputWithLabel/InputWithLabel.module.css
@@ -7,9 +7,10 @@
     text-align: left;
     min-width: 50%;
     position: relative;
-    padding: .4em .4em .4em 2em;
+    padding: .4em .4em .4em 1em;
     border-radius: .3em;
-    line-height: 1.5em;
+    font-size: 1rem;
+    border: none;
 }
 
 /* Tablet style */
