--- a/src/components/TodoPage/TodoPage.module.css
+++ b/src/components/TodoPage/TodoPage.module.css
@@ -6,7 +6,7 @@
   justify-content: center;
   font-size: 3rem; /* Adjust icon size */
   transition: transform 0.2s ease-in-out;
-  margin-bottom: 1em;
+  margin-bottom: .5em;
   color: #0c9bd3;
 }
 
@@ -16,6 +16,7 @@
 }
 
 .sorting-button {
+    color: rgb(78, 79, 80);
     margin-top: 2em;
     background: none;
     border: 2px solid rgb(78, 79, 80);
