--- a/src/components/TodoListItem/TodoListItem.module.css
+++ b/src/components/TodoListItem/TodoListItem.module.css
@@ -5,30 +5,17 @@
     color: white;
     margin: 0.5em 0.5em auto auto;
     text-align: left;
-    min-width: 70%;
+    min-width: 75%;
     position: relative;
     display: block;
-    padding: .4em .4em .4em 2em;
+    padding: .4em .4em .4em 1em;
     text-decoration: none;
     border-radius: .3em;
     transition: all .3s ease-out;
-}
+    overflow-x: hidden;
+    white-space: nowrap; 
+    text-overflow: ellipsis;
 
-.list_item:before {    
-    content: counter(li);
-    counter-increment: li;
-    position: absolute;
-    left: -1.3em;
-    top: 50%;
-    margin-top: -1.21em;
-    background: #99d7ef;
-    height: 2.33em;
-    width: 2.33em;
-    line-height: 2.3em;
-    text-align: center;
-    font-weight: bold;
-    border-radius: 2em;
-    transition: all .3s ease-out;     
 }
 
 .remove_button {  
@@ -55,10 +42,61 @@
 
 /* Tablet style */
 @media (min-width: 600px) and (max-width: 1200px) {
-
+  .list_item {
+    overflow-x: visible;
+    padding: .4em .4em .4em 2em;
+  }
+  .remove_button {  
+    color: #434242;
+    text-align: center;
+    border: none;
+    border-radius: 3px;
+    padding: 0.5em;
+    font-size: 0.8rem;
+    margin-top: 1em;
+    margin-right: auto;
+    max-height: fit-content;
+  }
+  .list_item:before {    
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    left: -1.3em;
+    top: 50%;
+    margin-top: -1.21em;
+    background: #99d7ef;
+    height: 2.33em;
+    width: 2.33em;
+    line-height: 2.3em;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 2em;
+    transition: all .3s ease-out;     
+}
 }
 
 
 /* Desktop style */
 @media (min-width: 1200px) {
+  .list_item {
+    overflow-x: visible;
+    padding: .4em .4em .4em 2em;
+  }
+
+  .list_item:before {    
+    content: counter(li);
+    counter-increment: li;
+    position: absolute;
+    left: -1.3em;
+    top: 50%;
+    margin-top: -1.21em;
+    background: #99d7ef;
+    height: 2.33em;
+    width: 2.33em;
+    line-height: 2.3em;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 2em;
+    transition: all .3s ease-out;     
+}
 }
