--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,10 +1,28 @@
 .search_field {
-    width: 30%;
+    width: 60%;
     height: 1.7em;
-    border-radius: 3px;
+    border-radius: 5px;
     padding: 0px 10px;
     font-size: 0.9rem;
     align-items: right;
-    margin-top: 3em;  
+    margin-top: 2em;  
     border: none;
 }
+
+/* Tablet style */
+@media (min-width: 600px) and (max-width: 1300px) {
+    .search_field {
+        width: 40%;
+        margin-top: 3em;
+        font-size: 1rem;      
+    }
+  }
+  
+  /* Desktop style */
+  @media (min-width: 1200px) {
+    .search_field {
+        width: 40%;
+        margin-top: 3em; 
+        font-size: 1rem;      
+    }
+  }
