--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,11 @@ body[data-theme="dark"] {
   border: 2px solid rgb(78, 79, 80);
   border-radius: 3px;
   cursor: pointer;
-  padding: 8px;
+  padding: 4px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px; /* Adjust icon size */
+  flex-direction: row;
+  justify-content: space-around;
+  font-size: 16px; /* Adjust icon size */
   transition: transform 0.2s ease-in-out;
   position: fixed;
 }
@@ -39,7 +39,7 @@ body[data-theme="dark"] {
 
 /* Light theme styles */
 body[data-theme="light"] .theme-button {
-  color: #333; /* Dark icon in light mode */
+  color: #676565; /* Dark icon in light mode */
 }
 
 /* Dark theme styles */
@@ -56,13 +56,18 @@ body[data-theme="light"] .theme-button:hover {
 
 /* Tablet style */
 @media (min-width: 600px) and (max-width: 1200px) {
-  #root {
-    max-width: none;
+  .theme-button {
+    padding: 8px;
+    font-size: 24px; /* Adjust icon size */   
   }
 }
 
 
 /* Desktop style */
 @media (min-width: 1200px) {
+  .theme-button {
+    padding: 8px;
+    font-size: 24px; /* Adjust icon size */   
+  }
 }
 
