--- a/src/components/TodoPage/TodoPage.module.css
+++ b/src/components/TodoPage/TodoPage.module.css
@@ -1,12 +1,10 @@
+/* Mobile style */
+
 .home-link {
   cursor: pointer;
-  padding: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem; /* Adjust icon size */
+  padding: 4px;
+  font-size: 2.5rem; /* Adjust icon size */
   transition: transform 0.2s ease-in-out;
-  margin-bottom: 1em;
   color: #0c9bd3;
 }
 
@@ -16,12 +14,14 @@
 }
 
 .sorting-button {
-    margin-top: 2em;
+    color: rgb(78, 79, 80);
+    margin-top: 1em;
     background: none;
     border: 2px solid rgb(78, 79, 80);
     border-radius: 3px;
     cursor: pointer;
-    font-size: 24px; /* Adjust icon size */
+    padding: 3px;
+    font-size: 16px; /* Adjust icon size */
     transition: transform 0.2s ease-in-out;
 }
 
@@ -32,4 +32,29 @@ button:hover {
 
 body[data-theme="dark"] .sorting-button {
     color: #ffd700; /* Yellow icon in dark mode */
+}
+
+/* Tablet style */
+@media (min-width: 600px) and (max-width: 1300px) {
+  .home-link { 
+    font-size: 3rem; /* Adjust icon size */
+    transition: transform 0.2s ease-in-out;
+    margin-bottom: .5em;
+  }
+  .sorting-button {
+    font-size: 24px; /* Adjust icon size */
+    padding: 6px;
+  }
+}
+
+/* Desktop style */
+@media (min-width: 1200px) {
+  .home-link {
+    padding: 8px;
+    font-size: 3rem; /* Adjust icon size */
+  } 
+  .sorting-button {
+    font-size: 24px; /* Adjust icon size */
+    padding: 6px;
+  }
 }
